--- a/index.html
+++ b/index.html
@@ -22,76 +22,68 @@
                     <h3>Fish List</h3>
                     <div class="fishContainer">
                         <div class="fish">
-                            <p>Name:</p>
-                            <p class="fish__name">Bubba</p>
                             <img class="fish__image" src="https://cdn.mos.cms.futurecdn.net/hKm2MuLdDLubD6rgeYLeDM.jpg"
                                 alt="happy axolotl">
-                            <p>Species:</p>
-                            <p class="fish__species">Ambystoma mexicanum</p>
-                            <p>Length:</p>
-                            <p class="fish__length">9.1 inches</p>
-                            <p>Harvest location:</p>
-                            <p class="fish__location">Xochimilco (near Mexico City)</p>
-                            <p>Diet:</p>
-                            <p class="fish__diet">Mollusks, worms, insect larvae, crustaceans and some fish</p>
-                        </div>
-
-                        <div class="fish">
-                            <p>Name:</p>
-                            <p class="fish__name">Bubba's Twin</p>
-                            <img class="fish__image" src="https://cdn.mos.cms.futurecdn.net/hKm2MuLdDLubD6rgeYLeDM.jpg"
-                                alt="happy axolotl">
-                            <p>Species:</p>
-                            <p class="fish__species">Ambystoma mexicanum</p>
-                            <p>Length:</p>
-                            <p class="fish__length">9.1 inches</p>
-                            <p>Harvest location:</p>
-                            <p class="fish__location">Xochimilco (near Mexico City)</p>
-                            <p>Diet:</p>
-                            <p class="fish__diet">Mollusks, worms, insect larvae, crustaceans and lakeweed</p>
+                            <p class="fish__name">Name: Bubba</p>
+                            <p class="fish__species">Species: Ambystoma mexicanum</p>
+                            <p class="fish__length">Length: 9.1 inches</p>
+                            <p class="fish__location">Harvest location: Xochimilco (near Mexico City)</p>
+                            <p class="fish__diet">Diet: Mollusks, worms, insect larvae, crustaceans and some fish</p>
                         </div>
                         <div class="fish">
-                            <p>Name:</p>
-                            <p class="fish__name">Bubba's Twin</p>
                             <img class="fish__image" src="https://cdn.mos.cms.futurecdn.net/hKm2MuLdDLubD6rgeYLeDM.jpg"
                                 alt="happy axolotl">
-                            <p>Species:</p>
-                            <p class="fish__species">Ambystoma mexicanum</p>
-                            <p>Length:</p>
-                            <p class="fish__length">9.1 inches</p>
-                            <p>Harvest location:</p>
-                            <p class="fish__location">Xochimilco (near Mexico City)</p>
-                            <p>Diet:</p>
-                            <p class="fish__diet">Mollusks, worms, insect larvae, crustaceans and lakeweed</p>
+                            <p class="fish__name">Name: Bubba</p>
+                            <p class="fish__species">Species: Ambystoma mexicanum</p>
+                            <p class="fish__length">Length: 9.1 inches</p>
+                            <p class="fish__location">Harvest location: Xochimilco (near Mexico City)</p>
+                            <p class="fish__diet">Diet: Mollusks, worms, insect larvae, crustaceans and some fish</p>
                         </div>
                         <div class="fish">
-                            <p>Name:</p>
-                            <p class="fish__name">Bubba's Twin</p>
                             <img class="fish__image" src="https://cdn.mos.cms.futurecdn.net/hKm2MuLdDLubD6rgeYLeDM.jpg"
                                 alt="happy axolotl">
-                            <p>Species:</p>
-                            <p class="fish__species">Ambystoma mexicanum</p>
-                            <p>Length:</p>
-                            <p class="fish__length">9.1 inches</p>
-                            <p>Harvest location:</p>
-                            <p class="fish__location">Xochimilco (near Mexico City)</p>
-                            <p>Diet:</p>
-                            <p class="fish__diet">Mollusks, worms, insect larvae, crustaceans and lakeweed</p>
+                            <p class="fish__name">Name: Bubba</p>
+                            <p class="fish__species">Species: Ambystoma mexicanum</p>
+                            <p class="fish__length">Length: 9.1 inches</p>
+                            <p class="fish__location">Harvest location: Xochimilco (near Mexico City)</p>
+                            <p class="fish__diet">Diet: Mollusks, worms, insect larvae, crustaceans and some fish</p>
                         </div>
                         <div class="fish">
-                            <p>Name:</p>
-                            <p class="fish__name">Bubba's Twin</p>
                             <img class="fish__image" src="https://cdn.mos.cms.futurecdn.net/hKm2MuLdDLubD6rgeYLeDM.jpg"
                                 alt="happy axolotl">
-                            <p>Species:</p>
-                            <p class="fish__species">Ambystoma mexicanum</p>
-                            <p>Length:</p>
-                            <p class="fish__length">9.1 inches</p>
-                            <p>Harvest location:</p>
-                            <p class="fish__location">Xochimilco (near Mexico City)</p>
-                            <p>Diet:</p>
-                            <p class="fish__diet">Mollusks, worms, insect larvae, crustaceans and lakeweed</p>
+                            <p class="fish__name">Name: Bubba</p>
+                            <p class="fish__species">Species: Ambystoma mexicanum</p>
+                            <p class="fish__length">Length: 9.1 inches</p>
+                            <p class="fish__location">Harvest location: Xochimilco (near Mexico City)</p>
+                            <p class="fish__diet">Diet: Mollusks, worms, insect larvae, crustaceans and some fish</p>
                         </div>
+                        <div class="fish">
+                            <img class="fish__image" src="https://cdn.mos.cms.futurecdn.net/hKm2MuLdDLubD6rgeYLeDM.jpg"
+                                alt="happy axolotl">
+                            <p class="fish__name">Name: Bubba</p>
+                            <p class="fish__species">Species: Ambystoma mexicanum</p>
+                            <p class="fish__length">Length: 9.1 inches</p>
+                            <p class="fish__location">Harvest location: Xochimilco (near Mexico City)</p>
+                            <p class="fish__diet">Diet: Mollusks, worms, insect larvae, crustaceans and some fish</p>
+                        </div>
+                        <div class="fish">
+                            <img class="fish__image" src="https://cdn.mos.cms.futurecdn.net/hKm2MuLdDLubD6rgeYLeDM.jpg"
+                                alt="happy axolotl">
+                            <p class="fish__name">Name: Bubba</p>
+                            <p class="fish__species">Species: Ambystoma mexicanum</p>
+                            <p class="fish__length">Length: 9.1 inches</p>
+                            <p class="fish__location">Harvest location: Xochimilco (near Mexico City)</p>
+                            <p class="fish__diet">Diet: Mollusks, worms, insect larvae, crustaceans and some fish</p>
+                        </div>                        
+                        <div class="fish">
+                            <img class="fish__image" src="https://cdn.mos.cms.futurecdn.net/hKm2MuLdDLubD6rgeYLeDM.jpg"
+                                alt="happy axolotl">
+                            <p class="fish__name">Name: Bubba</p>
+                            <p class="fish__species">Species: Ambystoma mexicanum</p>
+                            <p class="fish__length">Length: 9.1 inches</p>
+                            <p class="fish__location">Harvest location: Xochimilco (near Mexico City)</p>
+                            <p class="fish__diet">Diet: Mollusks, worms, insect larvae, crustaceans and some fish</p>
+                        </div>                        
                     </div>
                 </section>
 
