Added flexbox to travel quotes and locations

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <p class="fish__length">Length: 9.1 inches</p>
                             <p class="fish__location">Harvest location: Xochimilco (near Mexico City)</p>
                             <p class="fish__diet">Diet: Mollusks, worms, insect larvae, crustaceans and some fish</p>
-                        </div>                        
+                        </div>
                         <div class="fish">
                             <img class="fish__image" src="https://cdn.mos.cms.futurecdn.net/hKm2MuLdDLubD6rgeYLeDM.jpg"
                                 alt="happy axolotl">
@@ -83,37 +83,44 @@
                             <p class="fish__length">Length: 9.1 inches</p>
                             <p class="fish__location">Harvest location: Xochimilco (near Mexico City)</p>
                             <p class="fish__diet">Diet: Mollusks, worms, insect larvae, crustaceans and some fish</p>
-                        </div>                        
+                        </div>
                     </div>
                 </section>
-
                 <article class="travel">
-                    <section class="travel__quotes">
-                        <h3>Travel Quotes</h3>
-                        <div class="quote">
-                            <p class="quote__text">We wander for distraction, but we travel for fulfillment</p>
-                            <p>Author:</p>
-                            <p class="quote__author">Hilaire Belloc</p>
-                            <p>Location:</p>
-                            <p class="quote__location">Xochimilco</p>
-                        </div>
-                    </section>
+                    <div class="travelContainer">
+                        <section class="travel__quotes">
+                            <h3>Travel Quotes</h3>
+                            <div class="quote">
+                                <p class="quote__text">We wander for distraction, but we travel for fulfillment</p>
+                                <p class="quote__author">-- Hilaire Belloc</p>
+                                <p class="quote__location">On Xochimilco</p>
+                            </div>
+                            <div class="quote">
+                                <p class="quote__text">We wander for distraction, but we travel for fulfillment</p>
+                                <p class="quote__author">-- Hilaire Belloc</p>
+                                <p class="quote__location">On Xochimilco</p>
+                            </div>
+                        </section>
 
-                    <section class="travel__locations">
-                        <h3>Places to Go</h3>
-                        <div class="location">
-                            <p>Name:</p>
-                            <p class="location__name">Xochimilco</p>
-                            <p>Location:</p>
-                            <p class="location__geo">Mexico City, Mexcio</p>
-                            <img class="location__image"
-                                src="https://i.pinimg.com/736x/4c/cc/3d/4ccc3df4ca897c1a12a0d8b7e5c7df64.jpg"
-                                alt="boats on a river">
-
-                        </div>
-                    </section>
+                        <section class="travel__locations">
+                            <h3>Places to Go</h3>
+                            <div class="location">
+                                <img class="location__image"
+                                    src="https://i.pinimg.com/736x/4c/cc/3d/4ccc3df4ca897c1a12a0d8b7e5c7df64.jpg"
+                                    alt="boats on a river">
+                                <p class="location__name">Name: Xochimilco</p>
+                                <p class="location__geo">Location: Mexico City, Mexcio</p>
+                            </div>
+                            <div class="location">
+                                <img class="location__image"
+                                    src="https://i.pinimg.com/736x/4c/cc/3d/4ccc3df4ca897c1a12a0d8b7e5c7df64.jpg"
+                                    alt="boats on a river">
+                                <p class="location__name">Name: Xochimilco</p>
+                                <p class="location__geo">Location: Mexico City, Mexcio</p>
+                            </div>
+                        </section>
+                    </div>
                 </article>
-
             </div>
 
             <aside class="tipsList contentContainer__right">
