Added tipslist.css and formatted list of tips

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
             <aside class="tipsList contentContainer__right">
                 <h3>Care Tips</h3>
                 <div class="tip">
-                    <p>Topic:</p>
-                    <p class="tip__topic">Water Salination</p>
+                    <p class="tip__species">Species: Ambystoma mexicanum</p>
+                    <p class="tip__topic">Topic: Water Salination</p>
                     <p class="tip__text">No salty water!</p>
                 </div>
             </aside>
