Adjusted formatting of travel quote and tips

--- a/index.html
+++ b/index.html
@@ -128,16 +128,18 @@
             </div>
 
             <aside class="tipsList contentContainer__right">
-                <h3>Care Tips</h3>
+                <h3 class="careheader">Care Tips</h3>
                 <div class="tip">
                     <p class="tip__species">Species: Ambystoma mexicanum</p>
                     <p class="tip__topic">Topic: Water Salination</p>
                     <p class="tip__text">No salty water!</p>
+                    <p class="dot">&middot;</p>
                 </div>
                 <div class="tip">
                     <p class="tip__species">Species: Ambystoma mexicanum</p>
                     <p class="tip__topic">Topic: Water Salination</p>
                     <p class="tip__text">No salty water!</p>
+                    <p class="dot">&middot;</p>
                 </div>
                 <div class="tip">
                     <p class="tip__species">Species: Ambystoma mexicanum</p>
