Added dynamic representation of fish, quotes, locations and tips

--- a/index.html
+++ b/index.html
@@ -17,138 +17,23 @@
 
         <div class="contentContainer">
             <div class="contentContainer__left">
-
                 <section class="fishList">
-                    <h3>Fish List</h3>
-                    <div class="fishContainer">
-                        <div class="fish">
-                            <img class="fish__image" src="images/axolotl.jpg" alt="happy axolotl">
-                            <p class="fish__name">Name: Bubba</p>
-                            <p class="fish__species">Species: Ambystoma mexicanum</p>
-                            <p class="fish__length">Length: 9.1 inches</p>
-                            <p class="fish__location">Harvest location: Xochimilco (near Mexico City)</p>
-                            <p class="fish__diet">Diet: Mollusks, worms, insect larvae, crustaceans and some fish</p>
-                        </div>
-                        <div class="fish">
-                            <img class="fish__image" src="images/red-discus.jpg" alt="red discus">
-                            <p class="fish__name">Name: Percival</p>
-                            <p class="fish__species">Species: Symphysodon discus</p>
-                            <p class="fish__length">Length: 8 inches</p>
-                            <p class="fish__location">Harvest location: Amazon Basin</p>
-                            <p class="fish__diet">Diet: Algae, plant material, small invertabrates</p>
-                        </div>
-                        <div class="fish">
-                            <img class="fish__image" src="images/killfish.jpg" alt="killfish">
-                            <p class="fish__name">Name: Carlton</p>
-                            <p class="fish__species">Species: Fundulopanchax gardneri</p>
-                            <p class="fish__length">Length: 2.5 inches</p>
-                            <p class="fish__location">Harvest location: Africa</p>
-                            <p class="fish__diet">Diet: Shrimp, worms, tubifex</p>
-                        </div>
-                        <div class="fish">
-                            <img class="fish__image" src="images/koiangel.jpg" alt="koi angelfish">
-                            <p class="fish__name">Name: Shelby</p>
-                            <p class="fish__species">Species: Pterophyllum scalare</p>
-                            <p class="fish__length">Length: 6 inches</p>
-                            <p class="fish__location">Harvest location: Brazil</p>
-                            <p class="fish__diet">Diet: Brine shrimp, bloodworms</p>
-                        </div>
-                        <div class="fish">
-                            <img class="fish__image" src="images/alibinobarb.jpg" alt="albino tiger barbb">
-                            <p class="fish__name">Name: Gustavo Mario Antoine III</p>
-                            <p class="fish__species">Species: Puntius tetrazona</p>
-                            <p class="fish__length">Length: 3 inches</p>
-                            <p class="fish__location">Harvest location: Borneo</p>
-                            <p class="fish__diet">Diet: Brine shrimp, bloodworms</p>
-                        </div>
-                        <div class="fish">
-                            <img class="fish__image" src="images/bandedleo.jpg" alt="banded leporinus">
-                            <p class="fish__name">Name: Leopold</p>
-                            <p class="fish__species">Species: Leporinus fasciatus</p>
-                            <p class="fish__length">Length: 1 inch</p>
-                            <p class="fish__location">Harvest location: South America</p>
-                            <p class="fish__diet">Diet: Beef heart, vegetable matter</p>
-                        </div>
-                        <div class="fish">
-                            <img class="fish__image" src="images/redmickey.jpg" alt="happy axolotl">
-                            <p class="fish__name">Name: Piotr</p>
-                            <p class="fish__species">Species: Xiphophorus helleri</p>
-                            <p class="fish__length">Length: 4 inches</p>
-                            <p class="fish__location">Harvest location: Otjikoto Lake, Namibia</p>
-                            <p class="fish__diet">Diet: Tubifex, algae</p>
-                        </div>
-                    </div>
                 </section>
                 <article class="travel">
                     <div class="travelContainer">
-                        <section class="travel__quotes">
-                            <h3>Travel Quotes</h3>
-                            <div class="quote">
-                                <p class="quote__text">We wander for distraction, but we travel for fulfillment.</p>
-                                <p class="quote__author">-- Hilaire Belloc</p>
-                                <p class="quote__location">On Xochimilco</p>
-                            </div>
-                            <div class="quote">
-                                <p class="quote__text">Burn the forests if you will, but you will only scorch your own lungs.</p>
-                                <p class="quote__author">-- Anthony T. Hincks</p>
-                                <p class="quote__location">On environmentalism</p>
-                            </div>
-                            <div class="quote">
-                                <p class="quote__text">"If I'd learnt one thing from travelling, it was that the way to get things done was to go ahead and do them. Don't talk about going to Borneo. 
-                                    Book a ticket, get a visa, pack a bag, and it just happens."</p>
-                                <p class="quote__author">-- Alex Garland</p>
-                                <p class="quote__location">On Borneo</p>
-                            </div>
-                        </section>
-
                         <section class="travel__locations">
-                            <h3>Places to Go</h3>
-                            <div class="location">
-                                <img class="location__image"
-                                    src="https://i.pinimg.com/736x/4c/cc/3d/4ccc3df4ca897c1a12a0d8b7e5c7df64.jpg"
-                                    alt="boats on a river">
-                                <p class="location__name">Name: Xochimilco</p>
-                                <p class="location__geo">Location: Mexico City, Mexcio</p>
-                            </div>
-                            <div class="location">
-                                <img class="location__image"
-                                    src="images/amazonbasin.jpg" alt="a river in the amazon basin">
-                                <p class="location__name">Name: Amazon Basin</p>
-                                <p class="location__geo">Location: South America</p>
-                            </div>
-                            <div class="location">
-                                <img class="location__image"
-                                    src="images/borneobeach.jpg" alt="a beach in borneo crowded with docks">
-                                <p class="location__name">Name: Borneo</p>
-                                <p class="location__geo">Location: Southeast Asia</p>
-                            </div>
+                        </section>
+                        <section class="travel__quotes">
                         </section>
                     </div>
                 </article>
             </div>
 
             <aside class="tipsList contentContainer__right">
-                <h3 class="careheader">Care Tips</h3>
-                <div class="tip">
-                    <p class="tip__species">Species: Ambystoma mexicanum</p>
-                    <p class="tip__topic">Topic: Water Salination</p>
-                    <p class="tip__text">No salty water!</p>
-                    <p class="dot">&middot;</p>
-                </div>
-                <div class="tip">
-                    <p class="tip__species">Species: Ambystoma mexicanum</p>
-                    <p class="tip__topic">Topic: Water Salination</p>
-                    <p class="tip__text">No salty water!</p>
-                    <p class="dot">&middot;</p>
-                </div>
-                <div class="tip">
-                    <p class="tip__species">Species: Ambystoma mexicanum</p>
-                    <p class="tip__topic">Topic: Water Salination</p>
-                    <p class="tip__text">No salty water!</p>
-                </div>
+ 
             </aside>
         </div>
     </main>
+    <script type="module" src="./scripts/main.js"></script>
 </body>
-
 </html>
